# DVA315

./: README.md
Lab3/: CMakeLists.txt  README.md  client.c  list.c  list.h  server.c  wrapper.c  wrapper.h
Lab4/: main.c  readme.md
